--- a/onedrive.cfg
+++ b/onedrive.cfg
@@ -1,8 +1,8 @@
 export refresh_token_file="${script_base_folder}/.refresh_token"
 
 # Authentication config
-export api_client_id=""
-export api_client_secret=""
+export api_client_id="ea49f9fd-723e-4026-82fc-fd503cc4607f"
+export api_client_secret="X8Gzo?q=674].8.NcM.7VgNQYpg8fms4"
 
 # Permission to request on first authorization: One of ["onedrive.readwrite", "onedrive.appfolder"]
 export api_permissions="onedrive.readwrite"
